force-app/main/default/objects/Food_Item__c/fields/Calories_per_100g__c.field-meta.xml
<CustomField>
    <fullName>Calories_per_100g__c</fullName>
    <label>Calories per 100g</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>