force-app/main/default/objects/Food_Item__c/fields/Carbs_per_100g__c.field-meta.xml
<CustomField>
    <fullName>Carbs_per_100g__c</fullName>
    <label>Carbs per 100g</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>