force-app/main/default/objects/Food_Item__c/fields/Food_Name__c.field-meta.xml
<CustomField>
    <fullName>Food_Name__c</fullName>
    <label>Food_Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>