force-app/main/default/objects/Food_Item__c/fields/Protein_per_100g__c.field-meta.xml
<CustomField>
    <fullName>Protein_per_100g__c</fullName>
    <label>Protein per 100g</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>